fix:  spacing updat

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -7043,7 +7043,7 @@ single-post
   text-align: justify;
   word-spacing: -1px;
   letter-spacing: -0.5px;
-  line-height: 1.4;
+  line-height: 1.5;
 
 }
 
